# cqrs-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yaml
metrics/grafana/provisioning/: loki.yml  prometheus.yml
metrics/loki/: config.yml
metrics/prometheus/: prometheus.yml
metrics/vector/: vector.toml
migrations/: env.py
migrations/versions/: 00001_732b95cb714f_create_tables.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
nginx/sites-enabled/: example.com.conf
src/api/: __init__.py  __main__.py
src/api/common/: docs.py  dto.py  exceptions.py  tools.py
src/api/common/bus/: __init__.py  builder.py  core.py
src/api/common/interfaces/: bus.py  dto.py  event.py  handler.py  middleware.py  proxy.py
src/api/common/middlewares/: __init__.py  process_time.py  x_request_id.py
src/api/server/: __init__.py  _util.py  granian.py  gunicorn.py  uvicorn.py
src/api/v1/: __init__.py  dependencies.py
src/api/v1/commands/: __init__.py  constants.py
src/api/v1/dto/: __init__.py  healthcheck.py  user.py
src/api/v1/endpoints/: __init__.py  (+2 more)
src/config/: core.py
src/database/: _util.py  manager.py
src/database/alchemy/: __init__.py  core.py  tools.py  types.py
src/database/interfaces/: __init__.py  connection.py  manager.py  query.py
src/services/: gateway.py  tools.py
src/services/cache/: redis.py
src/services/interfaces/: cache.py
tests/integration/: conftest.py
tests/integration/user/: test_create.py  test_delete.py  test_get.py  test_update.py
(+24 files in other folders)
