[project]
name = "cqrs-template"
version = "0.1.0"
description = "Litestar webserver template with CQRS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "granian>=1.7.6",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "litestar[opentelemetry,prometheus]>=2.14.0",
    "pydantic-settings>=2.7.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
    "types-redis>=4.6.0.20241004",
    "uuid-utils>=0.10.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "nats-py>=2.9.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "pytest>=8.3.4",
    "testcontainers>=4.9.1",
]

[tool.mypy]
warn_unused_ignores = false
follow_imports_for_stubs = true
ignore_missing_imports = true
show_absolute_path = true
hide_error_codes = false
show_error_context = true
strict = true
warn_unreachable = true
warn_no_return = true
cache_dir = ".mypy_cache"
exclude = "^migrations/.*"


[tool.ruff]
extend-exclude = [
    "migrations/*.py"
]
lint.ignore = [
    'B008',
]
lint.select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "UP",
]
line-length = 100

[tool.ruff.lint.isort]
lines-after-imports = 2


[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = 'ignore::DeprecationWarning'
python_files = "test_*.py"
pythonpath = "./"
xfail_strict = true
log_level = "DEBUG"